--- a/src/main/resources/templates/boardwrite.html
+++ b/src/main/resources/templates/boardwrite.html
@@ -4,14 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>게시글 작성</title>
-    <meta name="_csrf" content="${_csrf.token}">
-    <meta name="_csrf_header" content="${_csrf.headerName}">
-
 </head>
 <body>
-    <header th:replace="layout :: header"></header>
     <form action="/board/save" method="post" enctype="multipart/form-data">
-        <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
         제목: <input type="text" name="Title">
         내용: <input type="text" name="Content">
         파일: <input type="file" name="file">
